# NaviAI

./: .env.example  .gitignore  README.md  README.pt-BR.md  docker-compose.yml  prompt.md  setup.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  dependencies.py  i18n.py  main.py
backend/app/adapters/llm/: __init__.py  anthropic_adapter.py  base_llm.py  ollama_adapter.py  openai_adapter.py  registry.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  knowledge.py  stt.py  tts.py  videos.py  vision.py
backend/app/db/: session.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  base.py  conversation.py  knowledge_chunk.py  message.py  trusted_video.py  user.py
backend/app/schemas/: auth.py  chat.py  stt.py  tts.py  vision.py
backend/app/services/: chat_service.py  oauth_service.py  rag_service.py  stt_service.py  tts_service.py  video_service.py  vision_service.py
backend/data/: trusted_videos.json
backend/data/knowledge_base/: agendar_sus.md  pagar_boleto.md  seguranca_digital.md  usar_pix.md  usar_whatsapp.md
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/messages/: en.json  pt-BR.json
frontend/public/: manifest.json  sw.js
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: PWARegister.tsx
frontend/src/hooks/: useCamera.ts  useNarration.ts  useSTT.ts  useTTS.ts
frontend/src/lib/: api-client.ts
frontend/src/stores/: accessibility-store.ts  auth-store.ts  chat-store.ts
(+21 files in other folders)
