[project]
name = "naviai-backend"
version = "0.1.0"
description = "NaviAI - AI Assistant for Elderly Users"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "edge-tts>=6.1.0",
    "pyyaml>=6.0.0",
    "python-frontmatter>=1.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
